# SpringNote

./: CHANGELOG.md  README.md
.github/scripts/: verify_update_metadata.py  write_update_metadata.py
.github/scripts/tests/: test_release_scripts.py
.github/workflows/: ai-review.yml  docs.yml  release.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/en/: index.md
spring_note/: pubspec.yaml
spring_note/installer/: springnote.iss
spring_note/ios/Runner/: Info.plist
spring_note/lib/: app.dart
spring_note/linux/flutter/: generated_plugins.cmake
spring_note/macos/: Podfile
spring_note/macos/Flutter/: GeneratedPluginRegistrant.swift
spring_note/macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MacUpdateController.swift  MainFlutterWindow.swift  TrayController.swift
spring_note/macos/Runner.xcodeproj/: project.pbxproj
spring_note/rust/: Cargo.toml
spring_note/rust/src/: ai.rs  ai_claude.rs  ai_gemini.rs  ai_openai.rs  cloud_sync.rs  stats.rs
spring_note/test/: ai_client_service_test.dart  clipboard_image_service_test.dart  local_data_service_test.dart  markdown_preview_test.dart  memory_page_test.dart  notes_page_test.dart  pasted_image_service_test.dart  security_scoped_directory_access_test.dart  settings_page_test.dart  widget_test.dart
spring_note/windows/: CMakeLists.txt
spring_note/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
update/: LATESTCHANGELOG.md  appcast.xml  mac.json  windows.json
便签/: 便签原型.html
设置/: 设置原型.html  设置界面设计.txt
(+38 files in other folders)
